--- a/Dockerfile-aidreaming
+++ b/Dockerfile-aidreaming
@@ -19,8 +19,8 @@ ENV PATH="${VIRTUAL_ENV}/bin:$PATH"
 
 # Pip configuration and installation of dependencies
 ENV PIP_CACHE_DIR=/app/.local/cache/pip
-COPY requirements_aidreaming.txt /app/requirements_versions.txt
-RUN python3 -m pip install -r /app/requirements_versions.txt
+COPY requirements_aidreaming.txt /app/requirements.txt
+RUN python3 -m pip install -r /app/requirements.txt
 
 # Git clone with specific directory as that is what the original repo did
 RUN mkdir /app/repositories && cd /app/repositories \
