--- a/Dockerfile-aidreaming
+++ b/Dockerfile-aidreaming
@@ -22,26 +22,26 @@ ENV PIP_CACHE_DIR=/app/.local/cache/pip
 COPY requirements_aidreaming.txt /app/requirements.txt
 RUN python3 -m pip install -r /app/requirements.txt
 
-# Git clone with specific directory as that is what the original repo did
-RUN mkdir /app/repositories && cd /app/repositories \
-    && git clone https://github.com/comfyanonymous/ComfyUI ComfyUI-from-StabilityAI-Official \
-    && cd /app/repositories/ComfyUI-from-StabilityAI-Official \
-    && git checkout 2bc12d3d22efb5c63ae3a7fc342bb2dd16b31735
-
 RUN mkdir -p /app/modules
 RUN mkdir -p /app/models
-# Not sure if I should build these into the image or volume mount.
-COPY models /app/models
-COPY modules /app/modules
 
+
+
+# Not sure if I should build these into the image or volume mount.
+COPY Fooocus/models /app/models
+COPY Fooocus/modules /app/modules
+COPY Fooocus/ldm_patched /app/ldm_patched
+COPY Fooocus/sdxl_styles /app/sdxl_styles
 # Python program to run in the container
-COPY entry_with_update.py /app/
-COPY fooocus_version.py /app/
-COPY launch.py /app/
-COPY shared.py /app/
-COPY webui.py /app/
-COPY LICENSE /app/
-COPY requirements_versions.txt /app/
+COPY Fooocus/entry_with_update.py /app/
+COPY Fooocus/fooocus_version.py /app/
+COPY Fooocus/build_launcher.py /app/
+COPY Fooocus/args_manager.py /app/
+COPY Fooocus/launch.py /app/
+COPY Fooocus/shared.py /app/
+COPY Fooocus/webui.py /app/
+COPY Fooocus/LICENSE /app/
+COPY Fooocus/requirements_versions.txt /app/
 
 #cache loctions
 ENV MPLCONFIGDIR=/app/.local/cache/matplotlib
