--- a/model-downloader/model_files.yaml
+++ b/model-downloader/model_files.yaml
@@ -1,5 +1,20 @@
 model_files:
+  # Required 
+  - url: https://huggingface.co/lllyasviel/misc/resolve/main/xlvaeapp.pth
+    folder: vae_approx
+    config_name: "Required"
+  - url: https://huggingface.co/lllyasviel/misc/resolve/main/vaeapp_sd15.pt ## Needs a name override to vaeapp_sd15.pth 
+    folder: vae_approx
+    config_name: "Required"
+  - url: "https://huggingface.co/lllyasviel/misc/resolve/main/xl-to-v1_interposer-v3.1.safetensors"
+    folder: vae_approx
+    config_name: "Required"
+  - url: "https://huggingface.co/lllyasviel/misc/resolve/main/fooocus_expansion.bin" ## Needs a name override to pytorch_model.bin
+    folder: fooocus_expansion
+    config_name: "Required"
 
+  
+  
   # General Config according to fooocus doccs 16/12/23
   - url: "https://huggingface.co/lllyasviel/fav_models/resolve/main/fav/juggernautXL_version6Rundiffusion.safetensors" 
     folder: "checkpoints"
