--- a/Dockerfile-aidreaming
+++ b/Dockerfile-aidreaming
@@ -2,7 +2,7 @@
 FROM ubuntu:jammy-20230804
 
 # Install needed apt software
-RUN apt-get update && apt-get upgrade -y && apt-get install -y python3 python3-pip python3.10-venv git
+RUN apt-get update && apt-get upgrade -y && apt-get install -y python3 python3-pip python3.10-venv git ffmpeg libsm6 libxext6
 
 # Create non-root user
 USER root
@@ -22,11 +22,13 @@ ENV PIP_CACHE_DIR=/app/.local/cache/pip
 COPY requirements_aidreaming.txt /app/requirements.txt
 RUN python3 -m pip install -r /app/requirements.txt
 
-RUN mkdir -p /app/external_models
-
+USER root
+RUN mkdir -p /app/external_models && chown -R appuser:appgroup /app/external_models
 # Not sure if I should build these into the image or volume mount.
-COPY Fooocus/models /app/models
-COPY Fooocus/modules /app/modules
+COPY --chown=appuser:appgroup Fooocus/models /app/models
+COPY --chown=appuser:appgroup Fooocus/modules /app/modules
+USER appuser
+
 COPY Fooocus/ldm_patched /app/ldm_patched
 COPY Fooocus/sdxl_styles /app/sdxl_styles
 COPY Fooocus/javascript /app/javascript
@@ -46,11 +48,9 @@ COPY Fooocus/requirements_versions.txt /app/
 ## Docker does not support overlays 
  # Will Symlink Models in /app/external_models into /app/models without overriding contents in /app/models 
  # on entry 
-COPY sync_models.sh /app/sync_models.sh
+COPY entrypoint.sh entrypoint.sh
 #cache loctions
 ENV MPLCONFIGDIR=/app/.local/cache/matplotlib
 ENV TRANSFORMERS_CACHE=/app/.local/cache/huggingface/hub
-# Currently Having issues with appuser being unable to symlink
-USER root 
 
-#ENTRYPOINT [ "python3", "/app/launch.py", "--listen" ]
+ENTRYPOINT [ "/app/entrypoint.sh" ]
