--- a/model-downloader/model_files.yaml
+++ b/model-downloader/model_files.yaml
@@ -25,6 +25,25 @@ model_files:
   - url: 'https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_offset_example-lora_1.0.safetensors'
     folder: "loras"
     config_name: "Basic"
+  
+  ## Nice to Have
+  # Fast
+  - url: "https://huggingface.co/lllyasviel/misc/resolve/main/sdxl_lcm_lora.safetensors"
+    folder: "loras"
+    config_name: "Fast"
+
+  # Upscaler
+  - url: "https://huggingface.co/lllyasviel/misc/resolve/main/fooocus_upscaler_s409985e5.bin"
+    folder: "upscale_models"
+    config_name: "upscaler"
+
+  # Face Swap
+  - url: "https://huggingface.co/lllyasviel/misc/resolve/main/clip_vision_vit_h.safetensors"
+    folder: "clip_vision"   
+    config_name: "face_swap"
+  - url: "https://huggingface.co/lllyasviel/misc/resolve/main/ip-adapter-plus_sdxl_vit-h.bin" 
+    folder: "controlnet"
+    config_name: "face_swap"
   ## SDXL Turbo (TODO:)
   
 
@@ -53,11 +72,24 @@ model_files:
   - url: "https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_offset_example-lora_1.0.safetensors"
     folder: loras
     config_name: "Anime"
+
+  # New Features
   # Inpaint according to fooocus doccs 16/12/23
   - url: "https://huggingface.co/lllyasviel/fooocus_inpaint/resolve/main/inpaint_v26.fooocus.patch"
     folder: inpaint
     config_name: "inpaint_control_model"
+  - url: "https://huggingface.co/lllyasviel/fooocus_inpaint/resolve/main/fooocus_inpaint_head.pth"
+    folder: inpaint
+    config_name: "inpaint_control_model"
+  # Describe Images
+  - url: "https://huggingface.co/lllyasviel/misc/resolve/main/model_base_caption_capfilt_large.pth"
+    folder: clip_vision
+    config_name: "describe_image"
+  - url: "https://huggingface.co/lllyasviel/misc/resolve/main/wd-v1-4-moat-tagger-v2.onnx"
+    folder: clip_vision
+    config_name: "describe_image"
 
+    
 ignore_config_name:
   - "General"
   - "Realistic"
